--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" onclick="jump()">
+<html lang="en" onclick="jump(), start()">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +8,9 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <p>Click to start the game.</p>
+    </header>
     <div id="frame">
         <div id="character"></div>
         <div id="block"></div>
