--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" onclick="jump(), start()">
+<html lang="en" onclick="jump(), start(), start2()">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,10 +10,14 @@
 <body>
     <header>
         <p>Click to start the game.</p>
+        <div class="score">
+            Score: 0000
+        </div>
     </header>
     <div id="frame">
         <div id="character"></div>
         <div id="block"></div>
+        <div id="block2"></div>
     </div>
     <script src="main.js"></script>
 </body>
