Replaced rectangles with charactr's and basic adjustments

--- a/index.html
+++ b/index.html
@@ -11,13 +11,21 @@
     <header>
         <p>Click to start the game.</p>
         <div class="score">
-            Score: 0000
+            <p id="scoreboard">
+                Score: 0000
+            </p>
         </div>
     </header>
     <div id="frame">
-        <div id="character"></div>
-        <div id="block"></div>
-        <div id="block2"></div>
+        <div id="character">
+            <img src="assets/character.png" alt="crab" srcset="">
+        </div>
+        <div id="flame">
+            <img src="assets/flames.png" alt="crab" srcset="">
+        </div>
+        <div id="flame2">
+            <img src="assets/flames.png" alt="crab" srcset="">
+        </div>
     </div>
     <script src="main.js"></script>
 </body>
