--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
-
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
@@ -34,6 +36,19 @@
             <img src="assets/flames.png" alt="crab" srcset="">
         </div>
         <button id="gamebutton">button</button>
+    </div>
+    <div id="mobile">
+        <p>Currently we do not support potrait mode. Please turn your phone</p>
+        <br>
+        <span class="material-symbols-outlined">
+            smartphone
+        </span>
+        <span class="material-symbols-outlined">
+            arrow_forward
+        </span>
+        <span class="material-symbols-outlined">
+            stay_current_landscape
+        </span>
     </div>
     <script src="main.js"></script>
 </body>
