Rewritten javascript for the game, made it more readable. Added Score and Highscore functionalities

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" onclick="jump(), start(), start2()">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -20,7 +20,7 @@
         <p>Dodge-The-Flames</p>
         <div class="score">
             <p id="scoreboard">
-                Score: 0000
+                High score: 0 Score: 0
             </p>
         </div>
     </header>
@@ -50,7 +50,8 @@
             stay_current_landscape
         </span>
     </div>
-    <script src="main.js"></script>
+    <!-- <script src="main.js"></script> -->
+    <script src="script.js"></script>
 </body>
 
 </html>
