Fixed Bug: game score starts increasing when clicked anywhere in the screen. Changed Phone message

--- a/index.html
+++ b/index.html
@@ -38,17 +38,21 @@
         <button id="gamebutton">button</button>
     </div>
     <div id="mobile">
-        <p>Currently we do not support potrait mode. Please turn your phone</p>
-        <br>
-        <span class="material-symbols-outlined">
-            smartphone
-        </span>
-        <span class="material-symbols-outlined">
-            arrow_forward
-        </span>
-        <span class="material-symbols-outlined">
-            stay_current_landscape
-        </span>
+        <p>Please turn your phone
+            <!-- <br> -->
+            <span class="material-symbols-outlined">
+                smartphone
+            </span>
+            <span class="material-symbols-outlined">
+                arrow_forward
+            </span>
+            <span class="material-symbols-outlined">
+                stay_current_landscape
+            </span>
+            <!-- <br>
+            <br> -->
+            to enjoy the game in full screen
+        </p>
     </div>
     <!-- <script src="main.js"></script> -->
     <script src="script.js"></script>
