removed alert, added a delay of 500 mil sec before the animation of fire starts, slowed down fire speed by 0.4 sec

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Dodge-The-Flames</title>
 </head>
 
 <body>
