changed alignment of header

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <header>
-        <p>Dodge-The-Flames</p>
+        <h1>Dodge-The-Flames</h1>
         <div class="score">
             <p id="scoreboard">
                 High score: 0 Score: 0
